2012-09-11  Julien Danjou  <julien@danjou.info>

	* gnus-notifications.el (gnus-notifications): Check for nil values in
	ignored addresses check.

2012-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* qp.el (quoted-printable-decode-region): Inline+CSE+strength-reduction.

2012-09-07  Chong Yidong  <cyd@gnu.org>

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Restore.

	* gnus-salt.el (gnus-tree-highlight-node):
	* gnus-sum.el (gnus-summary-highlight-line):
	* gnus-group.el (gnus-group-highlight-line): Revert use of add-face.

2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el: Fix compilation error on XEmacs 21.4.

2012-09-06  Juri Linkov  <juri@jurta.org>

	* gnus-group.el (gnus-read-ephemeral-gmane-group): Change the naming
	scheme for buffer names to be more consistent with other group and
	article buffer names in Gnus.

2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Removed.

	* gnus-compat.el: Define compat function `add-face' from Wolfgang
	Jenkner.

	* gnus-group.el (gnus-group-highlight-line): Use combining faces.

	* gnus-sum.el (gnus-summary-highlight-line): Ditto.

	* gnus-salt.el (gnus-tree-highlight-node): Ditto.

2012-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-score.el (gnus-score-decode-text-parts): Use #' for
	mm-text-parts used in labels macro to make it work with XEmacs 21.5.

	* gnus-util.el (gnus-string-prefix-p): New function, an alias to
	string-prefix-p in Emacs >=23.2.

	* nnmaildir.el (nnmaildir--ensure-suffix, nnmaildir--add-flag)
	(nnmaildir--remove-flag, nnmaildir--scan): Use gnus-string-match-p
	instead of string-match-p.
	(nnmaildir--scan): Use gnus-string-prefix-p instead of string-prefix-p.

2012-09-06  Kenichi Handa  <handa@gnu.org>

	* qp.el (quoted-printable-decode-region): Fix previous change; handle
	lowercase a..f.

2012-09-05  Magnus Henoch  <magnus.henoch@gmail.com>
